--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,10 +24,10 @@ jobs:
           python-version: '3.12'
 
       # Install dependencies
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install -r requirements.txt
+      # - name: Install dependencies
+      #   run: |
+      #     python3 -m pip install --upgrade pip
+      #     pip install -r requirements.txt
 
       # Run tests
       - name: Run tests
