--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -30,5 +30,5 @@ jobs:
       #     pip install -r requirements.txt
 
       # Run tests
-      - name: Run tests
-        run: pytest
+      # - name: Run tests
+      #   run: pytest
